# DataAgent

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README_SERVER.md  debug_ocr_output.html  docker-compose.hub.yml  docker-compose.yml  pyproject.toml  requirements.txt
configs/: default.yaml
configs/agent/: chain.yaml  react-small-vlm.yaml  react-vlm.yaml  react.yaml
configs/agent/tools/: readonly.yaml
configs/agent/tools/mcp/: default.json  local.json
configs/app/: default.yaml
configs/model/: gemini-2.0-flash.yaml  gpt-3.5-turbo.yaml  gpt-5-nano.yaml  gpt-5.1.yaml  gpt-5.yaml  hf-qwen3vl-2b-instruct.yaml  hf-smolvlm-256m-instruct.yaml  qwen3vl-2b-instruct.yaml  vllm-qwen2-7b.yaml  vllm-qwen3vl-2b-instruct.yaml  vllm-smolvlm2-256m-instruct.yaml  vllm-smolvlm2-2b-instruct.yaml  vllm-smolvlm2-instruct.yaml
configs/model/vllm/: default.yaml
configs/tools/: readonly.yaml
data_agent/: __init__.py  __main__.py
data_agent/mcp/scripts/: chatjs-install.sh
data_agent/src/: cli.py  data_agent.py  server.py  tools.py  vllm_server.py
data_agent/src/server/: __init__.py  __main__.py  connection_manager.py  data_agent_messenger.py  main.py  message_handler.py  utils.py
data_agent/static/: app.css  app.js  index.html  ocr.js
notes/: AI-Math-Assistant Tool Calling.ipynb  vllm_inference.ipynb
paddlex/inference/models/common/: static_infer.py
paddlex/inference/pipelines/components/retriever/: base.py
paddlex/inference/utils/: pp_option.py
