[project]
name = "data-agent"
version = "0.0.0"
description = "A project on data visualization and analyzing with agent. This is a task for MTAI master's program."
authors = [
    {name = "KirillPal",email = "kirpall@ya.ru"}
]
packages = [
    { include = "data_agent" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = ">=0.3.27"
hydra-core = ">=1.3.2"
omegaconf = ">=2.3.0"
langgraph = ">=0.6.10"
fastapi = ">=0.95.0"
uvicorn = {version = ">=0.22.0", extras = ["standard"]}
langchain-mcp-adapters = "^0.1.11"
dotenv = "^0.9.9"
langchain-openai = "^1.0.1"
langchain-community = "^0.4.1"
vllm = "^0.11.2"
num2words = "^0.5.14"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
